tests/should_pass/import_basic.fit
import import_basic_dep

fn run() -> () {
    foo()
}
