tests/should_fail/import_cycle.fit
import import_cycle_dep

fn run() -> ()
